--- a/TikFollow/App/style.css
+++ b/TikFollow/App/style.css
@@ -1,8 +1,10 @@
 .contantier {
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 body {
     color: white;
+    background-color: black;
 }
